# sopel-spellcheck

./: .gitignore  NEWS  README.md  requirements.txt  setup.cfg  setup.py
