[metadata]
name = sopel-spellcheck
version = 0.0.1
description = Spellcheck plugin for Sopel IRC bots
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-spellcheck
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false

[options.entry_points]
sopel.plugins =
    spellcheck = sopel_spellcheck
